[gd_scene load_steps=6 format=2]

[ext_resource path="res://scripts/Eagle.gd" type="Script" id=1]
[ext_resource path="res://sprites/bc_0.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[sub_resource type="Animation" id=3]
resource_name = "explode"
step = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 70, 71 ]
}

[node name="Eagle" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="coll" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="eagleArea" type="Area2D" parent="."]
input_pickable = false
monitorable = false
collision_layer = 0
collision_mask = 16

[node name="coll" type="CollisionShape2D" parent="eagleArea"]
shape = SubResource( 2 )

[node name="sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
vframes = 18
hframes = 16
frame = 256

[node name="explode" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
vframes = 9
hframes = 8
frame = 71

[node name="anim" type="AnimationPlayer" parent="explode"]
playback_speed = 3.0
anims/explode = SubResource( 3 )
[connection signal="area_entered" from="eagleArea" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="explode/anim" to="." method="_on_anim_animation_finished"]
